--- a/npf/types/notebook/template.ipynb
+++ b/npf/types/notebook/template.ipynb
@@ -27,6 +27,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "plt.style.use('seaborn-v0_8')\n",
+    "\n",
     "df = pd.DataFrame(data)"
    ]
   },
@@ -43,7 +45,7 @@
     "    plt.xlabel('{{x_names[0]}}')\n",
     "    plt.ylabel(y_name)\n",
     "    plt.legend(title='{{x_names[1]}}')\n",
-    "    plt.grid()\n",
+    "    # plt.grid() # SIMTODO: not needed if style is used\n",
     "    # plt.savefig('{{file_name}}.pdf') # SIMTODO: option?\n",
     "    plt.show()"
    ]
