--- a/npf/types/notebook/template.ipynb
+++ b/npf/types/notebook/template.ipynb
@@ -9,9 +9,7 @@
         ]
       },
       "source": [
-        "# Results\n",
-        "\n",
-        "## {{name}}\n"
+        "# Results of {{name}}\n"
       ]
     },
     {
@@ -45,7 +43,32 @@
         "plt.style.use('seaborn-v0_8')\n",
         "\n",
         "df = pd.DataFrame(data)\n",
+        "\n",
+        "var_names = {{var_names}}\n",
+        "y_vars = df.columns[df.columns.str.startswith('y_')]\n",
+        "\n",
+        "# df.columns = df.columns.str.lstrip('y_')\n",
         "display(df)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "tags": [
+          "bar",
+          "line"
+        ]
+      },
+      "outputs": [],
+      "source": [
+        "def global_config(ax, fig):\n",
+        "    ax.set_title('{{name}}')\n",
+        "    # ax.set_yscale('log')\n",
+        "\n",
+        "\n",
+        "def get_name(var):\n",
+        "    return var_names[var] if var in var_names else var"
       ]
     },
     {
@@ -60,15 +83,24 @@
       "source": [
         "# BAR\n",
         "\n",
-        "# SIMTODO: auto log scale & 0 xlim/ylim\n",
-        "for y_var, y_name in zip({{y_vars}}, {{y_names}}):\n",
-        "    df.groupby({{x_vars}})[y_var].mean().unstack().plot.bar()\n",
-        "    plt.title('{{name}}')\n",
+        "for y_var in y_vars:\n",
+        "    values = df.groupby({{x_vars}})[y_var]\n",
+        "\n",
+        "    {%- if x_vars|length > 1 %}\n",
+        "    values.mean().unstack().plot.bar(yerr=values.std().unstack())\n",
+        "    {% else %}\n",
+        "    values.mean().plot.bar(yerr=values.std())\n",
+        "    {% endif %}\n",
+        "\n",
+        "    global_config(plt.gca(), plt.gcf())\n",
+        "    \n",
         "    plt.xlabel('{{x_names[0]}}')\n",
-        "    plt.ylabel(y_name)\n",
+        "    plt.ylabel(get_name(y_var.lstrip('y_')))\n",
         "    plt.legend(title='{{x_names[1]}}')\n",
-        "    # plt.grid() # SIMTODO: not needed if style is used\n",
-        "    # plt.savefig('{{file_name}}.pdf') # SIMTODO: option?\n",
+        "    plt.title('{{name}}')\n",
+        "\n",
+        "    # plt.savefig('{{file_name}}_{{y_var}}.pdf')\n",
+        "\n",
         "    plt.show()"
       ]
     },
@@ -84,22 +116,43 @@
       "source": [
         "# LINE\n",
         "\n",
-        "# SIMTODO: auto log scale & 0 xlim/ylim\n",
-        "for y_var, y_name in zip({{y_vars}}, {{y_names}}):\n",
-        "    df.groupby({{x_vars}})[y_var].mean().unstack().plot.line()\n",
-        "    plt.title('{{name}}')\n",
+        "for y_var in y_vars:\n",
+        "    values = df.groupby({{x_vars}})[y_var]\n",
+        "\n",
+        "    {%- if x_vars|length > 1 %}\n",
+        "    values.mean().unstack().plot.line(yerr=values.std().unstack())\n",
+        "    {% else %}\n",
+        "    values.mean().plot.line(yerr=values.std())\n",
+        "    {% endif %}\n",
+        "    \n",
         "    plt.xlabel('{{x_names[0]}}')\n",
-        "    plt.ylabel(y_name)\n",
+        "    plt.ylabel(get_name(y_var.lstrip('y_')))\n",
         "    plt.legend(title='{{x_names[1]}}')\n",
-        "    # plt.grid() # SIMTODO: not needed if style is used\n",
-        "    # plt.savefig('{{file_name}}.pdf') # SIMTODO: option?\n",
+        "    plt.title('{{name}}')\n",
+        "\n",
+        "    # plt.savefig('{{file_name}}_{{y_var}}.pdf')\n",
+        "    \n",
         "    plt.show()"
       ]
     }
   ],
   "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.2"
     }
   },
   "nbformat": 4,
