No lstrip & lowercase py files & start test fix

--- a/npf/types/notebook/template.ipynb
+++ b/npf/types/notebook/template.ipynb
@@ -42,9 +42,8 @@
         "\n",
         "var_names = {{var_names}}\n",
         "x_vars = {{x_vars}}\n",
-        "y_vars = df.columns[df.columns.str.startswith('y_')]\n",
+        "y_vars = {{y_vars}}\n",
         "\n",
-        "# df.columns = df.columns.str.lstrip('y_')\n",
         "display(df)"
       ]
     },
@@ -84,12 +83,12 @@
         "    {% endif %}\n",
         "\n",
         "    plt.xlabel('{{x_names[0]}}')\n",
-        "    plt.ylabel(get_name(y_var.lstrip('y_')))\n",
+        "    plt.ylabel(get_name(y_var))\n",
         "    plt.legend(title='{{x_names[1]}}')\n",
         "    plt.title('{{name}}')\n",
+        "    plt.grid(alpha=0.3)\n",
         "\n",
         "    # plt.savefig(f'{{file_name}}_{y_var}.pdf')\n",
-        "\n",
         "    plt.show()"
       ]
     },
@@ -114,13 +113,13 @@
         "    values.mean().plot.barh(xerr=values.std())\n",
         "    {% endif %}\n",
         "\n",
-        "    plt.xlabel(get_name(y_var.lstrip('y_')))\n",
+        "    plt.xlabel(get_name(y_var))\n",
         "    plt.ylabel('{{x_names[0]}}')\n",
         "    plt.legend(title='{{x_names[1]}}')\n",
         "    plt.title('{{name}}')\n",
+        "    plt.grid(alpha=0.3)\n",
         "\n",
         "    # plt.savefig(f'{{file_name}}_{y_var}.pdf')\n",
-        "\n",
         "    plt.show()"
       ]
     },
@@ -146,12 +145,12 @@
         "    {% endif %}\n",
         "\n",
         "    plt.xlabel('{{x_names[0]}}')\n",
-        "    plt.ylabel(get_name(y_var.lstrip('y_')))\n",
+        "    plt.ylabel(get_name(y_var))\n",
         "    plt.legend(title='{{x_names[1]}}')\n",
         "    plt.title('{{name}}')\n",
+        "    plt.grid(alpha=0.3)\n",
         "\n",
         "    # plt.savefig(f'{{file_name}}_{y_var}.pdf')\n",
-        "    \n",
         "    plt.show()"
       ]
     },
@@ -173,8 +172,9 @@
         "    sns.boxplot(x='{{x_vars[0]}}', y=y_var, data=df)\n",
         "\n",
         "    plt.xlabel('{{x_names[0]}}')\n",
-        "    plt.ylabel(get_name(y_var.lstrip('y_')))\n",
+        "    plt.ylabel(get_name(y_var))\n",
         "    plt.title('{{name}}')\n",
+        "    plt.grid(alpha=0.3)\n",
         "\n",
         "    # plt.savefig(f'{{file_name}}_{y_var}.pdf')\n",
         "    plt.show()\n",
@@ -189,9 +189,12 @@
         "    for xv in [var for var in x_vars if var != legend_x_var]:\n",
         "        sns.boxplot(x=xv, y=yv, hue=legend_x_var, data=df)\n",
         "        plt.xlabel(get_name(xv))\n",
-        "        plt.ylabel(get_name(yv.lstrip('y_')))\n",
+        "        plt.ylabel(get_name(yv))\n",
         "        plt.legend(title=get_name(legend_x_var))\n",
         "        plt.title('{{name}}')\n",
+        "        plt.grid(alpha=0.3)\n",
+        "\n",
+        "        # plt.savefig(f'{{file_name}}_{y_var}.pdf')\n",
         "        plt.show()\n",
         "\n",
         "{%- endif %}"
@@ -215,10 +218,13 @@
         "    for x_var, x_var_values in df.groupby({{x_vars}}):\n",
         "        sns.kdeplot(x_var_values[y_var], cumulative=True, label=x_var)\n",
         "\n",
-        "    plt.xlabel(get_name(y_var.lstrip('y_')))\n",
-        "    plt.ylabel(f'Cumulative distribution of {get_name(y_var.lstrip(\"y_\"))}')\n",
-        "    plt.title('{{name}}')\n",
+        "    plt.xlabel(get_name(y_var))\n",
+        "    plt.ylabel(f'Cumulative distribution of {get_name(y_var)}')\n",
         "    plt.legend(title=get_name(x_var))\n",
+        "    plt.title('{{name}}')\n",
+        "    plt.grid(alpha=0.3)\n",
+        "\n",
+        "    # plt.savefig(f'{{file_name}}_{y_var}.pdf')\n",
         "    plt.show()\n",
         "\n",
         "{%- else %}\n",
@@ -232,10 +238,13 @@
         "        for x_var, x_var_values in df.groupby({{x_vars}}):\n",
         "            sns.kdeplot(x_var_values[yv], cumulative=True, label=x_var)\n",
         "\n",
-        "        plt.xlabel(get_name(yv.lstrip('y_')))\n",
-        "        plt.ylabel(f'Cumulative distribution of {get_name(yv.lstrip(\"y_\"))}')\n",
-        "        plt.title('{{name}}')\n",
+        "        plt.xlabel(get_name(yv))\n",
+        "        plt.ylabel(f'Cumulative distribution of {get_name(yv)}')\n",
         "        plt.legend(title=get_name(legend_x_var))\n",
+        "        plt.title('{{name}}')\n",
+        "        plt.grid(alpha=0.3)\n",
+        "\n",
+        "        # plt.savefig(f'{{file_name}}_{y_var}.pdf')\n",
         "        plt.show()\n",
         "\n",
         "{%- endif %}"
@@ -261,6 +270,7 @@
         "    plt.xlabel(get_name(x_vars[1]))\n",
         "    plt.ylabel(get_name(x_vars[0]))\n",
         "    plt.title('{{name}}')\n",
+        "    plt.grid(alpha=0.3)\n",
         "\n",
         "    # plt.savefig(f'{{file_name}}_{y_var}.pdf')\n",
         "    plt.show()\n",
@@ -278,6 +288,9 @@
         "        plt.xlabel(get_name(legend_x_var))\n",
         "        plt.ylabel(get_name(xv))\n",
         "        plt.title('{{name}}')\n",
+        "        plt.grid(alpha=0.3)\n",
+        "\n",
+        "        # plt.savefig(f'{{file_name}}_{y_var}.pdf')\n",
         "        plt.show()\n",
         "\n",
         "{%- endif %}"
