execution arguments nb, force, update, no exec

--- a/npf/types/notebook/template.ipynb
+++ b/npf/types/notebook/template.ipynb
@@ -16,7 +16,8 @@
       "execution_count": null,
       "metadata": {
         "tags": [
-          "all"
+          "all",
+          "data"
         ]
       },
       "outputs": [],
